# SikoraGenerator

./: CMakeLists.txt  IZ.json  README.md  circuitsData.json  circuitsDataValidated.json  correctionRate.json  latexRaport.tex  latexTable.tex  test.txt
cppSources/: JSONValidation.cpp  circuits.cpp  circuitsCalculate.cpp  latex.cpp  latexRaport.cpp  main.cpp
headers/: basicLibraries.hpp  calculations.hpp  circuitsCalculate.hpp  jsonValidation.hpp  latexRaport.hpp
